# antique

./: FAQ  HOWTO-Make-Bootflash  HOWTO-Make-Crypto-Bootflash.txt  Makefile  Makefile.in  README  TODO  clean.mk  config.status  configure  configure.ac  functions.mk  globals.mk  globals.mk.in  images.mk  images.mk.in  make-distro  mkimage-profiles-desktop.spec  use.mk  use.mk.in
autom4te.cache/: output.0  requests  traces.0
profiles/: Makefile  Makefile.in  functions.mk  initfs  modules-usb
profiles/addon/: Makefile  Makefile.in
profiles/contrib/: Makefile  Makefile.in
profiles/install2/: Makefile  Makefile.in
profiles/install2/image-scripts.d/: 08history  50-udev  999system
profiles/install2/scripts.d/: 06clock  08button
profiles/isofiles/.disk/: info
profiles/isofiles/Metadata/: pkg-groups.tar
profiles/isolinux/: common  common.in  install  install.in  install.syslinux  live  live.syslinux  memtest  rescue  rescue.syslinux
profiles/kernel-pae/: Makefile  Makefile.in
profiles/kernel-pae/scripts.d/: 01-basesystem.manifest
profiles/live/: Makefile  Makefile.in
profiles/live/image-scripts.d/: init1-fstab  init1-rm-boot-dir  init1-rwroot  init3-UTC-false  init3-depmod  init3-freshclam  init3-hal  init3-live-encfs  init3-locales  init3-modblacklst  init3-network  init3-pam-encfs  init3-services  init3-users  init5-firefox-homepage  init5-firsttime  init5-gdm-autologin  init5-homeros  init5-homeros-autoapps  init5-homeros-autologin  init5-homeros-firefox-default  init5-homeros-root  init5-homeros-sudo  init5-homeros-users-emacs  init5-inittab  init5-kde4-desktop-icons  init5-kde4-firsttime  init5-kdm-autologin  init5-ktip-off  init5-kwallet-turnoff  init5-nepomukserver-turnoff  init5-xdm  init5-xorgconf  stage1-propagator
profiles/live/image-scripts.d/unused/: 05halt  init1-bootsplash  init1-ntfs3g-suid  init1-udev  init3-hotplug  init5-OOo-menu-fonts-scaling  init5-autologin  init5-gtk-update-icon-cache  init5-update-menus  init5-xkb
profiles/live/scripts.d/: 00resolv
profiles/ltsp/: Makefile  Makefile.in
profiles/main/: .base  Makefile  Makefile.in
profiles/pkg/: .directory  Makefile
profiles/pkg/groups/: 3d.directory  antique-admin.directory  antique-full.directory  antique-icewm.directory  antique-mini.directory  antique-modul.directory  antique-multimedia.directory  antique-office.directory  antique-wm.directory  asterisk-1.4.directory  asterisk-1.6.0.directory  asterisk-1.6.1.directory  asterisk-1.6.2.directory  asterisk-devel.directory  blogs.directory  buildsystem.directory  centaurus-desktop.directory  centaurus-dev.directory  centaurus-gnome.directory  devel-hardware.directory  dhcp-server-a.directory  dhcp-server.directory  diag-tools.directory  dictionary.directory  dns-server-a.directory  dns-server-m.directory  eclipse.directory  edu-lite.directory  emulators.directory  ftp-server-a.directory  ftp-server.directory  games.directory  ganeti.directory  gnome-money.directory  gnome-multimedia-lite.directory  gnome-network-lite.directory  gnome-peer-to-peer.directory  gnome-phone.directory  graphics-editing.directory  graphics-lite.directory  (+52 more)
profiles/pkg/licenses/: wine-local.all.html
profiles/pkg/lists/: .base  389  3d  Makefile  WM-mini  alterator-desktop  alterator-server.in  antique  antique-admin  antique-base  antique-disk  antique-full  antique-icewm  antique-mini  antique-modul  antique-multimedia  antique-office  antique-wm  artist  asterisk-1.4  asterisk-1.6.0  asterisk-1.6.1  asterisk-1.6.2  asterisk-devel  asterisk-devel.in  backup  base  base-mithraenpbx  base-mithraenpbx.in  base-server  base-server.in  base.in  buildsystem  centaurus-dev  centaurus-dev.in  chainmail  children  clasters  compiz  compiz-kde  (+163 more)
profiles/pkg/tags/: Makefile
profiles/pkg/tags/alterator/: alterator-desktop
profiles/pkg/tags/antique/: antique  antique-admin  antique-base  antique-disk  antique-full  antique-icewm  antique-mini  antique-modul  antique-multimedia  antique-wm
profiles/pkg/tags/base/: antique  antique-base  base  icewm-mini  kde  kde3  kde3-lite  ltsp  pspo  rescue  xfce
profiles/pkg/tags/cd/: antique-disk  antique-full  disk-cd  disk-ltsp  disk-server  gnome-addons-light  gnome-multimedia-lite  gnome-network-lite  gnome-office-light  gnome-office-light-cd  kde-lite  kde3-lite  slinux-games  xfce-graphics-lite  xfce-multimedia-lite  xfce-network-lite  xfce-office-lite
profiles/pkg/tags/contrib/: hardware-extras
profiles/pkg/tags/desktop/: alterator-desktop  base  live-children  pspo  wmaker
profiles/pkg/tags/disk/: disk-cd  disk-dvd  disk-dvd-gnome  disk-dvd-kde  disk-ltsp  disk-server
profiles/pkg/tags/docs/: xfce-docs
profiles/pkg/tags/dvd/: base  disk-dvd  disk-dvd-kde  gnome-dvd  gnome-office  kde
profiles/pkg/tags/games/: slinux-games  xfce-games-lite
profiles/pkg/tags/gnome/: disk-dvd-gnome  gnome-addons  gnome-addons-light  gnome-base  gnome-dvd  gnome-multimedia-lite  gnome-network-lite  gnome-office  gnome-office-light  gnome-office-light-cd  gnome-peer-to-peer  gnome-workbench  pspo-gnome
profiles/pkg/tags/hardware/: hardware-extras  hardware-server
profiles/pkg/tags/kde/: kde-lite  pspo-kde  pspo-kde3
profiles/pkg/tags/kde3/: kde3  kde3-dial-up  kde3-edu  kde3-lite
profiles/pkg/tags/live/: live  live-children  live-restore  wmaker
profiles/rescue/: Makefile  Makefile.in
profiles/rescue/image-scripts.d/: 003adjtime  999system
profiles/rescue/scripts.d/: 06clock
profiles/scripts.d/: 01-copy-license  01-genbasedir  02-gfxboot  02-gfxboot.in  02-memtest  03-syslinux  05-copydocs  05-copydocs.in  05bootsplash  06-gpgkey  75-addon-prepare
tests/: Makefile  Makefile.in  check-iso-size  test-iso
tests/tests.d/: contents  contents.in  install
tests/tests.d/dvd/: test-install
tests/tests.d/lite-cd/: addons.pat  basesystem.pat  black.pat  boot.pat  datetime.pat  finish.pat  kbd.pat  language.pat  license.pat  lilo.pat  net.pat  next.pat  pack1.pat  pack2.pat  root.pat  savesettings.pat  splash.pat  sysboot.pat  syssplash.pat  sysxdm.pat  test-install  timezone.pat  user.pat  vm.pat  x11.pat
(+25 files in other folders)
